# authentication

./: pyproject.toml
physicsstudios/: manage.py
physicsstudios/authentication/: authentication.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
physicsstudios/authentication/migrations/: 0001_initial.py  0002_alter_myuser_created_date_alter_myuser_modified_date.py  0003_alter_myuser_created_date_alter_myuser_modified_date.py
physicsstudios/physicsstudios/: asgi.py  settings.py  urls.py  wsgi.py
