[tool.poetry]
name = "auth-new"
version = "0.1.0"
description = ""
authors = ["Vikum-AI <63595074+Vikum-AI@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
django-environ = "^0.10.0"
psycopg2 = "^2.9.5"
drf-yasg = "^1.21.5"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"
djangorestframework-simplejwt = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
